61.Security/07.NetworkPolicy/ingress-networkpolicy.yml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: ingress80443-network-policy
#   namespace: nginx
# spec:
#   podSelector:
#     matchLabels:
#       app: nginx  # pod 지정
#   policyTypes:
#   - Ingress
#   - Egress
#   ingress:
#   - from:
#     - ipBlock:
#         cidr: 0.0.0.0/0  # IP any open
#     ports:
#     - protocol: TCP
#       port: 80  # nodeport의 경우 nodeport port를 지정
#     # - protocol: TCP
#     #   port: 444
#   egress: 
#   - {}  # any open

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
      - podSelector:
          matchLabels:
          ## 특정 label을 가지는 파드만 허용, 네임스페이스 전체에 label 지정 
            app: nginx  
        ## 네임스페이스 selector 따로 있음
        namespaceSelector:
          matchLabels:
            env: staging
